tests/paczka1/small_fuzzy/78313905.err
Error in line 8: HlFnTfS A940 79,7
Error in line 15: HlFnTfS A779 -2,8
